welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = 
{
	if(estFaceMur())
		return false
	recule()
	if(getCouleurSol() == Color.green)
		val vert = (getGroundColor() == Color.green);
	avance()
	return vert
}        
